--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ This tool was created by community members using public data to estimate allocat
         <img class="twitter-animated" src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter AK47ven" width="64" height="64">
     </a>
     <a href="https://x.com/_SOL_AR" target="_blank">
-        <img class="twitter-animated" style="transform: scaleX(-1);"  style="transform: scaleX(-1);" src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter SOL_AR"" style="transform: scaleX(-1);" width="64" height="64">
+        <img class="twitter-animated" src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter SOL_AR" width="64" height="64" style="transform: scaleX(-1);">
     </a>
 </div>
     </div>
